// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card-container Basic renders as expected 1`] = `
<div>
  <a
    className="unprose mb18 block color-blue-on-hover"
    href="#category"
  >
    <h2
      className="txt-bold"
      id="category"
    >
      Category
       
      <span
        data-swiftype-index="false"
      >
        (
        2
        )
      </span>
    </h2>
  </a>
  <div
    className="grid grid--gut36"
  >
    <div
      className="mb18 col col--12 col--6-ml"
    >
      <a
        className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
      >
        <div
          className="relative h120 mb6"
        >
          <div
            className="relative h120 mb12"
            style={
              Object {
                "backgroundImage": "url('https://i.giphy.com/media/A9lgUYVqLeRb2/giphy.gif')",
                "backgroundPosition": "center",
                "backgroundSize": "100% auto",
              }
            }
          />
        </div>
        <div>
          
          <div
            className="mb6"
          >
            Example one
          </div>
          <div
            className="color-gray color-gray-on-hover"
          >
            description
          </div>
        </div>
      </a>
    </div>
    <div
      className="mb18 col col--12 col--6-ml"
    >
      <a
        className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
      >
        <div
          className="relative h120 mb6"
        >
          <div
            className="relative h120 mb12"
            style={
              Object {
                "backgroundImage": "url('https://i.giphy.com/media/A9lgUYVqLeRb2/giphy.gif')",
                "backgroundPosition": "center",
                "backgroundSize": "100% auto",
              }
            }
          />
        </div>
        <div>
          
          <div
            className="mb6"
          >
            Example two
          </div>
          <div
            className="color-gray color-gray-on-hover"
          >
            description
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`card-container No thumbnail image renders as expected 1`] = `
<div>
  <a
    className="unprose mb18 block color-blue-on-hover"
    href="#another-category"
  >
    <h2
      className="txt-bold"
      id="another-category"
    >
      Another category
       
      <span
        data-swiftype-index="false"
      >
        (
        2
        )
      </span>
    </h2>
  </a>
  <div
    className=""
  >
    <div
      className="mb18 border-b border--darken10"
    >
      <a
        className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
      >
        
        <div>
          
          <div
            className="mb6"
          >
            Example one
          </div>
          <div
            className="color-gray color-gray-on-hover"
          >
            description
          </div>
        </div>
      </a>
    </div>
    <div
      className="mb18 border-b border--darken10"
    >
      <a
        className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
        href="path"
      >
        
        <div>
          
          <div
            className="mb6"
          >
            Example two
          </div>
          <div
            className="color-gray color-gray-on-hover"
          >
            description
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
